fixing touch issue on mobile

--- a/src/sass/06_components/_components_mobile.scss
+++ b/src/sass/06_components/_components_mobile.scss
@@ -1004,10 +1004,6 @@
 
       //modal styling - mobile
       #modal-anchor {
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
         .modal {
           background-color: $white;
           &.modal-sm {
